--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@gre/color",
-  "version": "0.1.0",
+  "name": "gre-color",
+  "version": "0.0.0-development",
   "description": "Color utilities",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit": "git-cz"
+    "test": "jasmine-node src",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lamtranweb/gre-color.git"
+    "url": "https://github.com/lamtranweb/gre-color.git"
   },
   "author": "Lam Tran <lamtran@gmail.com> (http://lamtran.com/)",
   "license": "MIT",
@@ -18,5 +20,14 @@
   "homepage": "https://github.com/lamtranweb/gre-color#readme",
   "dependencies": {
     "parse-color": "1.0.0"
+  },
+  "devDependencies": {
+    "commitizen": "2.9.3",
+    "cz-conventional-changelog": "1.2.0",
+    "jasmine-node": "1.14.5",
+    "semantic-release": "^6.3.2"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
