--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
   "devDependencies": {
     "commitizen": "2.9.3",
     "cz-conventional-changelog": "1.2.0",
+    "ghooks": "2.0.0",
     "jasmine-node": "1.14.5",
     "semantic-release": "^6.3.2"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test"
+    }
   }
 }
