--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
+    "check-coverage": "istanbul check-coverage  --statements 100 --branches 100 --functions 100 --lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "istanbul cover -x **/*Spec.js --include-all-sources jasmine-node src",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -22,6 +24,7 @@
     "parse-color": "1.0.0"
   },
   "devDependencies": {
+    "codecov.io": "0.1.6",
     "commitizen": "2.9.3",
     "cz-conventional-changelog": "1.2.0",
     "ghooks": "2.0.0",
@@ -34,7 +37,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm run test && npm run check-coverage"
     }
   }
 }
