--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "gre-color",
   "version": "0.0.0-development",
   "description": "Color utilities",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "commit": "git-cz",
     "check-coverage": "istanbul check-coverage  --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "istanbul cover -x **/*Spec.js --include-all-sources jasmine-node src",
+    "test": "istanbul cover -x **/*.test.js _mocha -- -R spec src",
+    "test:watch": "npm t -- -w",
+    "cover": "nyc npm t",
+    "prebuild": "rimraf dist",
+    "build": "babel --copy-files --out-dir dist --ignore **/*.test.js src",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/lamtranweb/gre-color.git"
@@ -21,15 +29,21 @@
   },
   "homepage": "https://github.com/lamtranweb/gre-color#readme",
   "dependencies": {
+    "babel-polyfill": "^6.20.0",
     "parse-color": "1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "6.18.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-stage-2": "6.18.0",
+    "chai": "3.5.0",
     "codecov.io": "0.1.6",
     "commitizen": "2.9.3",
     "cz-conventional-changelog": "1.2.0",
     "ghooks": "2.0.0",
     "istanbul": "0.4.5",
-    "jasmine-node": "1.14.5",
+    "mocha": "3.2.0",
+    "rimraf": "2.5.4",
     "semantic-release": "^6.3.2"
   },
   "czConfig": {
@@ -39,5 +53,11 @@
     "ghooks": {
       "pre-commit": "npm run test && npm run check-coverage"
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
