--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "commit": "git-cz",
-    "check-coverage": "istanbul check-coverage  --statements 100 --branches 100 --functions 100 --lines 100",
+    "check-coverage": "nyc check-coverage  --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "istanbul cover -x **/*.test.js _mocha -- -R spec src",
+    "test": "mocha src --compilers js:babel-register",
     "test:watch": "npm t -- -w",
     "cover": "nyc npm t",
     "prebuild": "rimraf dist",
@@ -36,6 +36,7 @@
     "babel-cli": "6.18.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-stage-2": "6.18.0",
+    "babel-register": "6.18.0",
     "chai": "3.5.0",
     "codecov.io": "0.1.6",
     "commitizen": "2.9.3",
@@ -43,6 +44,7 @@
     "ghooks": "2.0.0",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
+    "nyc": "10.0.0",
     "rimraf": "2.5.4",
     "semantic-release": "^6.3.2"
   },
@@ -51,7 +53,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test && npm run check-coverage"
+      "pre-commit": "npm run cover && npm run check-coverage"
     }
   },
   "babel": {
